<resources>
    <string name="app_name">PillFill</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="alarmN">Alarm Name</string>
    <string name="med">Medication</string>
    <string name="BTcon">Confirm</string>
</resources>
