<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TimePicker
            android:id="@+id/timePicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/timePicker2"
            android:layout_marginEnd="86dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText3"
            android:layout_below="@+id/editText3"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText4"
            android:layout_toStartOf="@+id/editText3"
            android:text="@string/alarmN" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignEnd="@+id/textView"
            android:text="@string/med" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="38dp"
            android:layout_toStartOf="@+id/toggleButton3"
            android:text="ToggleButton"
            android:textOff="@string/monday" />

        <ToggleButton
            android:id="@+id/toggleButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/toggleButton7"
            android:layout_alignBottom="@+id/toggleButton7"
            android:layout_toEndOf="@+id/toggleButton7"
            android:text="ToggleButton"
            android:textOff="@string/sunday" />

        <ToggleButton
            android:id="@+id/toggleButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/toggleButton6"
            android:layout_alignBottom="@+id/toggleButton6"
            android:layout_centerHorizontal="true"
            android:text="ToggleButton"
            android:textOff="@string/saturday" />

        <ToggleButton
            android:id="@+id/toggleButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toggleButton4"
            android:layout_marginTop="18dp"
            android:layout_toStartOf="@+id/toggleButton7"
            android:text="ToggleButton"
            android:textOff="@string/friday" />

        <ToggleButton
            android:id="@+id/toggleButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/toggleButton3"
            android:layout_marginEnd="18dp"
            android:text="ToggleButton"
            android:textOff="@string/thursday" />

        <ToggleButton
            android:id="@+id/toggleButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/toggleButton5"
            android:layout_alignBottom="@+id/toggleButton5"
            android:layout_toStartOf="@+id/toggleButton5"
            android:text="ToggleButton"
            android:textOff="@string/wednesday" />

        <ToggleButton
            android:id="@+id/toggleButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/toggleButton2"
            android:layout_toStartOf="@+id/toggleButton4"
            android:text="ToggleButton"
            android:textOff="@string/tuesday" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toggleButton8"
            android:layout_marginTop="38dp"
            android:layout_toEndOf="@+id/toggleButton6"
            android:text="@string/BTcon" />

    </RelativeLayout>

</ScrollView>